# manga-dataset-parser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  artifacts.md  cleanup.md  commands.md  source-provenance.md
manifests/: manga_sources.example.json  manga_sources.polished.json
src/manga_artist_dataset/: __init__.py  __main__.py  concurrency.py  errors.py  expected_targets.py  image_formats.py  json_types.py  models.py  text_keys.py
src/manga_artist_dataset/cleanup/: bubble_masks.py  config.py  dataset_cleaner.py  dataset_split.py  detector.py  image_standardize.py  inpainter.py  io.py  models.py  parallel.py  pipeline.py  scratch_png.py  text_cleaner.py
src/manga_artist_dataset/cli/: main.py
src/manga_artist_dataset/io/: files.py  http.py  jsonl.py
src/manga_artist_dataset/polished/: manifest_builder.py  source_clients.py
src/manga_artist_dataset/reroll/: bad_pages.py
tests/: test_build_dataset.py  test_cleanup_pipeline.py  test_parallel_pipeline.py
tests/integration/: test_cleanup_sample_image.py
tests/unit/cleanup/: test_bubble_masks.py  test_dataset_split.py  test_pipeline.py  test_text_cleaner.py
